// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders RTL styling 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input is-rtl "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders bare styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input c-txt__input--bare "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders default styling 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders disabled styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input is-disabled "
  data-garden-id="textfields.input"
  data-garden-version="version"
  disabled={true}
/>
`;

exports[`Input renders focused styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input is-focused "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders hovered styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input is-hovered "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders media layout styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input c-txt__input--media "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders open styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input is-open "
  data-garden-id="textfields.input"
  data-garden-version="version"
  open={true}
/>
`;

exports[`Input renders select styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input c-txt__input--select "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders small styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input c-txt__input--sm "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders tag layout styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input c-txt__input--tag "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input validation renders error styling if provided 1`] = `
<input
  aria-invalid={true}
  className="c-txt__input c-txt__input--error "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input validation renders none styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input validation renders success styling if provided 1`] = `
<input
  aria-invalid={false}
  className="c-txt__input c-txt__input--success "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input validation renders warning styling if provided 1`] = `
<input
  aria-invalid={true}
  className="c-txt__input c-txt__input--warning "
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;
